
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.5 beta 5 (rev 1655 - October 7, 2006)
====================================

* DocManager update: Fix menu index parent selection, numerous little bugfixes for js errors. (1649)
* [FS#444] and [FS#549] Ability to sort TVs by template assignment. (1642,1643,1645,1646)
* Fix for the QuickEdit language string problem. (1637)
* [FS#512] MySQL 4.1.21 sorting problems. Implemented GROUP BY fix for all necessary queries. (1628)
* Remove Snippets tab from Content page and Remove dedicated "create folder" manager menu option. (1636)
* Update action pages to reference new frames/menu/tree structure (1626)
* Merge frames and remove webelm.js for much improved Safari and cross-browser consistency (1623,1624)
* Added plugin_priority language define to all revised language files (1612)
* Updated/cleaned launguage files with utf8 encoding when possible (1610)
* Added ability to specify plugin run order.  Incorporates a new screen similar to ajaxmenu index for determining the plugin run order per event.  Added column priority to table site_plugin_events.
* Fix for IE styling issues in file manager
* Amend getUserData() in document parser so the include filename respects case-sensitivity.
* Changed phpSniff include in getUserData.extender.php to use $modx->config['base_path'] and not $modx->getManagerPath() so the full path to the file is used.
* Added Jot 1.0 and updated eFormt to release 1.3 (1602)
* Change Tiny MCE plugin to use relative URLs, set default theme to MODx Light  and set RTE to Tiny MCE for new installs (1596)
* Revise top-level manager menu oreder; move clear cache back to site menu (with preview site menu item) (1588)
* Replace original MODx theme with MODxLightBlue (1586)